# deriva-ml

./: .gitignore  404.html  CHANGELOG.md  CLAUDE.md  CONTEXT.md  README.md  doc_gen.py  index.html  mkdocs.yml  objects.inv  pyproject.toml  release.sh  sitemap.xml  test_output.txt
.github/: release-drafter.yml
.github/workflows/: main.yml  publish-docs.yml  release.yml  validate-schema.yml
Notebooks/: DerivaML Create Notes.ipynb  DerivaML Dataset.ipynb  DerivaML Execution.ipynb  DerivaML Features.ipynb  DerivaML Vocabulary.ipynb
Notebooks/DerivaML Create Notes/: DerivaML Create Notes.ipynb  index.html
Notebooks/DerivaML Dataset/: DerivaML Dataset.ipynb  index.html
Notebooks/DerivaML Execution/: DerivaML Execution.ipynb  index.html
Notebooks/DerivaML Features/: DerivaML Features.ipynb  index.html
Notebooks/DerivaML Ingest/: index.html
Notebooks/DerivaML Vocabulary/: index.html
VM_setup_instruction/: index.html
adr/0001-lineage-walks-data-flow-not-orchestration/: index.html
adr/0002-validate-not-dryrun-pre-flight/: index.html
adr/0003-dataset-dev-versioning-model/: index.html
adr/0004-dataset-version-uses-pep440/: index.html
adr/0005-dev-versioning-delivery-sequence/: index.html
adr/0006-bag-oriented-data-movement/: index.html
adr/0007-annotation-builders-public-api/: index.html
adr/0008-estimate-bag-size-bypasses-bag-pipeline/: index.html
adr/0009-unified-commit-output-assets/: index.html
api-reference/dataset/: index.html
api-reference/dataset_aux_classes/: index.html
api-reference/dataset_bag/: index.html
api-reference/dataset_split/: index.html
api-reference/deriva_definitions/: index.html
api-reference/deriva_ml_base/: index.html
api-reference/deriva_model/: index.html
api-reference/exceptions/: index.html
api-reference/execution/: index.html
api-reference/execution_configuration/: index.html
api-reference/feature/: index.html
api-reference/lineage/: index.html
api-reference/upload/: index.html
api-reference/workflow/: index.html
architecture/: index.html
archive/2026-05-audit-working-drafts/: index.html
archive/2026-05-bag-cutover/: index.html
audits/2026-05-22-audit-status/: index.html
audits/2026-05-22-engineer-audit-asset/: index.html
audits/2026-05-22-engineer-audit-catalog/: index.html
audits/2026-05-22-engineer-audit-core/: index.html
audits/2026-05-22-engineer-audit-dataset/: index.html
audits/2026-05-22-engineer-audit-execution/: index.html
audits/2026-05-22-engineer-audit-feature/: index.html
audits/2026-05-22-engineer-audit-model/: index.html
cli-reference/: index.html
code-docs/dataset/: index.html
dataset_bag/: index.html
demo_catalog/: __init__.py  demo_catalog.py
deriva_ml/: DerivaML Example.ipynb  __init__.py  dataset.py  dataset_bag.py  deriva_definitions.py  deriva_ml_base.py  deriva_ml_schema_setup.py  execution_configuration.py  execution_template.py  upload.py  validate_configuration.py
deriva_ml_base/: index.html
deriva_ml_structure/: index.html
docs/: VM_setup_instruction.md  cli-reference.md  dataset_bag.md  datasetbag.md  deriva_ml_base.md  deriva_ml_structure.md  execution.md  execution_configuration.md  index.md  ml_workflow_instruction.md  release-notes.md
execution/: index.html
execution_configuration/: index.html
ml_workflow_instruction/: index.html
reference/: index.html
release-notes/: index.html
schema-setup/: deriva_ml_schema_setup.py  table_comments_utils.py
scripts/: consolidate_workflow_types.py  cutover_smoke_check.py  generate_association_indexes.py  migrate_dataset_execution_version.py  migrate_workflow_types.py  provenance_backfill.py
search/: search_index.json
src/: deriva_ml.py  execution_template.py  validate_configuration.py
tests/: catalog_manager.py  conftest.py  derivaml_test.py  factories.py  runner.py  test_add_files_root_name.py  test_basic_tables.py  test_dataset.py  test_dataset_like_signature_parity.py  test_demo_catalog.py  test_deriva_ml.py  test_download.py  test_execution.py  test_factories.py  test_features.py  test_migrate_dataset_execution_version.py  test_migration_complete.py  test_restructure_assets.py  test_upload.py  test_utils.py  test_vocabulary.py  test_working_data.py
(+887 files in other folders)
