[build-system]
requires = ["setuptools>=42", "wheel", "setuptools-git-versioning>=2.0,<3"]
build-backend = "setuptools.build_meta"


[project]
name = "deriva-ml"
dynamic = ["version"]
authors = [
    {name = "ISRD", email = "isrd-dev@isi.edu"},
]
description = "Utilities to simplify use of Dervia and Pandas"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "bdbag~=1.7.3",
    "deriva~=1.7.4",
    "pandas~=2.2.3",
    "ipython~=8.29.0",
    "regex~=2024.7.24",
    "setuptools-git-versioning~=2.0.0",
    "requests~=2.32.3",
    "pydantic~=2.10.1",
]


[tool.setuptools.package-data]
# include VERSION file to a package
deriva_ml = ["deriva_ml/VERSION"]


[tool.setuptools-git-versioning]
enabled = true
version_file = "deriva_ml/VERSION"
count_commits_from_version_file = true


[project.scripts]
deriva-ml-table-comments-utils = "deriva_ml.schema_setup.table_comments_utils:main"
deriva-ml-create-schema = "deriva_ml.schema_setup.create_schema:main"
deriva-ml-alter-annotation = "deriva_ml.schema_setup.alter_annotation:main"

[metadata]
license = "Apache 2.0"
keywords = ["deriva-ml"]