[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "deriva-ml"
dynamic = ["version"]
authors = [
    {name = "ISRD", email = "isrd-dev@isi.edu"},
]
description = "Utilities to simplify use of Dervia and Pandas"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "deriva~=1.7.4",
    "pandas",
    "ipython~=8.29.0",
    "regex~=2024.7.24",
    "pydantic~=2.10.1",
]

[tool.setuptools.dynamic]
version = {attr = "deriva_ml.__version__"}  # any module attribute compatible with ast.literal_eval

[project.scripts]
deriva-ml-table-comments-utils = "deriva_ml.schema_setup.table_comments_utils:main"
deriva-ml-create-schema = "deriva_ml.schema_setup.create_schema:main"
deriva-ml-alter-annotation = "deriva_ml.schema_setup.alter_annotation:main"

[metadata]
license = "Apache 2.0"
keywords = ["deriva-ml"]